sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: '(' expected but identifier found.
		if plusPetit(i+1,i){
                   ^AlgBubbleSort1:12: error: illegal start of simple expression
	}
        ^